test/Fail/Issue3331.err
Issue3331.agda:5.38-58: error: [RepeatedNamesInImportDirective]
Repeated name in import directive: true
when scope checking the declaration
  open import Agda.Builtin.Bool using (true) renaming (true to tt)
